[package]
name = "iconv"
description = "iconv bindings for Rust"
version = "0.1.1"
authors = ["ShuYu Wang <andelf@gmail.com>", "hhggit <zh.xz@outlook.com>"]
repository = "https://github.com/andelf/rust-iconv"
license = "MIT"
keywords = ["iconv", "encoding"]
edition = "2018"

[dependencies]
libc = "0.2.186"
dyn_buf = "0.1.0"
